Changed text to test github

--- a/Html/Jan 3/styles.html
+++ b/Html/Jan 3/styles.html
@@ -13,7 +13,7 @@
     <p style="color:red; background-color: aquamarine;">This is a paragraph with color Attribute</p>
     <pre style="font-size: larger;">
         this text is pre formatted
-        and it preserves the 
+        and it preserves a 
         spaces and line breaks
     </pre>
     <p style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">This paragraph is in san serif.</p>
