Jan 3 day-1 Started HTML from W3schools

--- a/Html/Jan 3/styles.html
+++ b/Html/Jan 3/styles.html
@@ -7,7 +7,7 @@
 </head>
 
 <body style="background-color:burlywood;">
-    <h1> Styles and Formatting of text using HTMl </h1>
+    <h1> Styles and Formatting of text using HTML </h1>
         
     <p title="tooltip">This is a paragraph tag <br> With a line break</p>
     <p style="color:red; background-color: aquamarine;">This is a paragraph with color Attribute</p>
@@ -35,9 +35,23 @@
          Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. 
     </blockquote>
     <p>This text is in <q>Quotes</q></p>
-
-
-
+    <p style="font-size: large;"><abbr title="Affluence Digital Solutions">ADS</abbr> - Abbriviation</p>
+    <address>
+        Author - Arindam Kalra<br>
+        Visit at<br>
+        arindamkalraaa@gmial.com<br>
+    </address>
+    <p><cite>Cite </cite>is used to show the title of a creative work</p>
+    <bdo dir="rtl"> Bi-directional Override - text written from right to left</bdo>
+    <!-- this is a comment -->
+    <hr style="color: white;">
+    <h1>HTML color</h1>
+    <p style="color:rgb(37, 94, 58)">This text is colored using rgb values </p>
+    <p style="color:rgba(235, 15, 161, 0.6)">This text is colored using rgba values. a - Alpha channel</p>
+    <p style="color: #ee82ee;">This text is colored using HEX color values #rrggbb</p>
+    <p style="color: hsl(219, 37%, 33%);">This text is coloured using HSL - Hue Saturation Lightness</p>
+    <p style="color: hsla(121, 85%, 50%, 0.8);">This text is coloured using HSLA - Hue Saturation Lightness Alpha channel</p>
+    
 
 </body>
 
