Jan 4 day-2 further work on HTML

--- a/Html/Jan 3/index.html
+++ b/Html/Jan 3/index.html
@@ -2,26 +2,60 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" type="image/x-icon" href="D:\Web Development\Images\fav.png">
     <title>Html Introduction</title>
+    <style>
+        a:link {
+            color: white;
+        }
+
+        a:visited {
+            color: silver;
+        }
+
+        body {
+            background-color: purple;
+        }
+
+        h3 {
+            text-decoration: underline;
+            color: snow;
+        }
+    </style>
 
 </head>
 
-<body style="background-color: blueviolet;">
-    <h1 style="text-align: center;">Arindam Kalra</h1>
-    <h2 style="font-family: 'Courier New', Courier, monospace;text-align: center">This is heading 2</h2>
+<body>
+    <table style="width: 500px;">
+        <tr>
+            <td><img src="D:\Web Development\Images\image.jpg" alt="HTML5" height="100" width="80"></td>
+
+
+            <td>
+                <h1>Arindam Kalra</h1>
+                <h2 style="font-family: 'Courier New', Courier, monospace">HTML Training</h2>
+            </td>
+        </tr>
+
+    </table>
     <hr>
-    <img src="D:\Web Development\Images\image.jpg" alt="HTML5" height="100" width="80">
     <h3>Different pages :</h3>
     </h3>
-    <a href="styles.html" style="color: white;">Diffrent Styles of Text</a>
-    <br>
-    <a href="internalCSS.html" style="color: white;">Internal CSS </a>
-    <br>
-    <a href="externalCSS.html" style="color: white;">External CSS</a>
-    <br>
-    <a href="links.html" style="color: white;"> Links </a>
-    <br>
-    <a href="https://www.w3schools.com/tags/default.asp" style="color: white;">W3Schools Tag refrence</a>
+    <ul>
+        <li><a href="styles.html" style="color: white;">Diffrent Styles of Text</a></li>
+        <li><a href="internalCSS.html" style="color: white;">Internal CSS </a></li>
+        <li><a href="externalCSS.html" style="color: white;">External CSS</a></li>
+        <li><a href="file:///D:/Web%20Development/Html/Jan%204/links.html" style="color: white;"> Links </a></li>
+        <li><a href="https://www.w3schools.com/tags/default.asp" style="color: white;">W3Schools Tag refrence</a></li>
+        <li><a href="file:///D:/Web%20Development/Html/Jan%204/images.html">Images</a></li>
+        <li><a href="file:///D:/Web%20Development/Html/Jan%204/tables.html">Tables</a></li>
+        <li><a href="file:///D:/Web%20Development/Html/Jan%204/lists.html">Lists</a></li>
+        <li><a href="file:///D:/Web%20Development/Html/Jan%204/class_id.html">Divs, Spans, Classes and IDs</a></li>
+        <li><a href="file:///D:/Web%20Development/Html/Jan%204/iframes.html">Iframes</a></li>
+
+
+
+    </ul>
 
 </body>
 
