--- a/Html/Jan 3/internalCSS.html
+++ b/Html/Jan 3/internalCSS.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Internal CSS</title>
+    <link rel="icon" type="image/x-icon" href="D:\Web Development\Images\fav.png">
     <style>
         body {background-color: yellowgreen;}
         h3 {color: tomato; text-align: center;}
