--- a/Html/Jan 3/styles.html
+++ b/Html/Jan 3/styles.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Html Styles and Formatting</title>
+    <link rel="icon" type="image/x-icon" href="D:\Web Development\Images\fav.png">
 
 </head>
 
