--- a/Html/Jan 3/externalCSS.html
+++ b/Html/Jan 3/externalCSS.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" type="image/x-icon" href="D:\Web Development\Images\fav.png">
     <title>External CSS</title>
     <link rel="stylesheet" href="external.css">
 
