--- a/Html/Jan 3/index.html
+++ b/Html/Jan 3/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <base target="_blank">
 
 <head>
     <link rel="icon" type="image/x-icon" href="D:\Web Development\Images\fav.png">
