Jan 5 day-3 further progress in HTML

--- a/Html/Jan 5/radiobox type.html
+++ b/Html/Jan 5/radiobox type.html
@@ -37,7 +37,7 @@
         <label for="one">MAN</label><br>
         <input type="radio" id="two" name="woman" >
         <label for="two">WOMAN</label><br>
-        <input type="radio" id="three" name="othebike">
+        <input type="radio" id="three" name="othe">
         <label for="three">OTHER</label>
     </form>
         
