--- a/Html/Jan 5/reset type.html
+++ b/Html/Jan 5/reset type.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" type="image/x-icon" href="D:\Web Development\Images\fav.png">
+    <link rel="icon" type="image/x-icon" href="../../Images/fav.png">
     <title>Input Element - Types</title>
     <meta charset="UTF-8">
     <style>
